--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "firebase": "^10.12.0",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^11.2.13",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0"
   },
