--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "reactjs-popup": "^2.0.6",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0"
   },
